# clipmcp

./: .gitignore  CONTRIBUTING.md  Jenkinsfile  README.md  pyproject.toml
.github/: CODEOWNERS
src/clipmcp/: __init__.py  __main__.py  categorizer.py  config.py  embeddings.py  html_handler.py  image_handler.py  models.py  monitor.py  sensitive.py  server.py  storage.py
tests/: test_categorizer.py  test_debug_context.py  test_html_handler.py  test_sensitive.py  test_storage.py
