[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipmcp"
version = "0.1.0"
description = "A standalone clipboard history MCP server for macOS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
secure = [
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
]

[project.scripts]
clipmcp = "clipmcp.server:main"

[project.entry-points."mcp.server"]
clipmcp = "clipmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clipmcp"]
