[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipmcp"
version = "0.1.0"
description = "A standalone clipboard history MCP server for macOS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
secure = [
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
]
semantic = [
    "sentence-transformers>=2.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
clipmcp = "clipmcp.server:main"

[project.entry-points."mcp.server"]
clipmcp = "clipmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clipmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
